Nord/Südseite korrekt bezeichnet

--- a/code/sd-karteninhalt/index.html
+++ b/code/sd-karteninhalt/index.html
@@ -360,8 +360,8 @@
 </div>
 
 <div class="verteilung_hinweis">
-	S&uumld-West = <span id="solaranteil_in_prozent_string1"></span>%,
-	Nord-Ost = <span id="solaranteil_in_prozent_string2"></span>%
+	Nord-Ost = <span id="solaranteil_in_prozent_string1"></span>%,
+	S&uumld-West = <span id="solaranteil_in_prozent_string2"></span>%
 </div>
 
 <table class="wetter" id="wetter_stunden"></table>
