Refresh nur auf kleinen BEreich erlaubt

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -338,7 +338,7 @@
 		/*	}*/
 	</style>
 </head>
-<body onclick="refresh();" onload="refresh();">
+<body onload="refresh();">
 
 <div id="fehler_vorhang"></div>
 <div id="fehler">
@@ -348,7 +348,7 @@
 	<p>Einfach warten, was wird schon...</p>
 </div>
 
-<div id="elektrische_daten">
+<div id="elektrische_daten" onclick="refresh();">
 	<div class="energie">
 		<span id="ueberschuss"></span>
 		<span class="einheit">W</span>
