Aktionen für Steuerung in BAckend begonnen

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -38,7 +38,7 @@
 				done_func();
 			}
 			xhr.open(
-				'POST',
+				'GET',
 				'change?key=' + key + '&val=' + val + '&time=' + Math.floor(new Date().getTime() / 1000),
 				true
 			);
