Wechsel der Ladleitung abgesichert

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -77,6 +77,7 @@
 			secure_action_list = tmp_list;
 			
 			if(secure_action_list.length >= 5) {
+				secure_action_list = [];
 				refresh(action, key, val);
 			}
 		}
