--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -383,6 +383,10 @@
 			.zusatzinfo .off {
 				color: #666;
 			}
+			.zusatzinfo .info,
+			.zusatzinfo .info span {
+				color: #666;
+			}
 		
 		.schalter {
 			vertical-align: bottom;
@@ -437,8 +441,8 @@
 </div>
 
 <div class="zusatzinfo">
-	<span>NO <span id="solaranteil_in_prozent_string1"></span>%</span>
-	<span>SW <span id="solaranteil_in_prozent_string2"></span>%</span>
+	<span class="info">NO <span id="solaranteil_in_prozent_string1"></span>%</span>
+	<span class="info">SW <span id="solaranteil_in_prozent_string2"></span>%</span>
 	<span id="wasser_ueberladen">WASSER</span>
 	<span id="heizung_ueberladen">HEIZUNG</span>
 </div>
