Aktive Sonnenstrahlung markiert

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -443,7 +443,7 @@
 </div>
 
 <div class="zusatzinfo">
-	<span id="solarerzeugung_ist_aktiv">N%<span id="solaranteil_in_prozent_string1"></span>/S%<span id="solaranteil_in_prozent_string2"></span></span>
+	<span id="solarerzeugung_ist_aktiv">N<span id="solaranteil_in_prozent_string1"></span>%S<span id="solaranteil_in_prozent_string2"></span></span>
 	<span id="auto_laden_an">AUTO</span>
 	<span id="roller_laden_an">ROLL</span>
 	<span id="wasser_ueberladen">WASS</span>
